who we are block

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
           <li class="header-item"><a href="#" class="header-item-link">Главная</a></li>
           <li class="header-item"><a href="#" class="header-item-link">О нас</a></li>
           <li class="header-item"><a href="#" class="header-item-link">Услуги</a></li>
-          <li class="header-item"><a href="#" class="header-item-link">Отзывы</a></li>
+          <li class="header-item"><a href="#" class="header-item-link">Кейсы</a></li>
           <li class="header-item"><a href="#" class="header-item-link">Контакты</a></li>
+          <li class="header-item"><a href="#" class="header-item-link">FAQ</a></li>
           <button class="btn btn-white mobile-btn">Записаться на консультацию</button>
           <div class="header-social mobile-social">
             <a href="#" class="header-social-link"><img src="./img/icons/linkedin.svg" alt="linkedin logo"></a>
@@ -78,15 +79,15 @@
 
   <section class="about">
     <div class="container">
-      <div class="title about-title">О нас</div>
+      <h2 class="title about-title">О нас</h2>
       <div class="about-wrap">
         <div class="about-image">
           <img src="./img/about.jpg" alt="about image">
         </div>
         <div class="about-text">
-          <h2 class="about-subtitle">
+          <h3 class="about-subtitle">
             Сохранение капитала
-          </h2>
+          </h3>
           <span class="about-subtitle">
             Очень важно для нас
           </span>
@@ -103,6 +104,117 @@
       </div>
     </div>
   </section>
+
+  <section class="who">
+    <div class="container">
+      <h2 class="title who-title">Кто мы такие</h2>
+      <div class="who-container">
+      <div class="who-slider">
+        <div class="who-slide who-slide-active">
+          <div class="who-photos">
+            <img src="./img/main-model.png" alt="slide">
+            <div class="who-arrows">
+              <i class="arrow arrow-left who-left"></i>
+              <i class="arrow arrow-right who-right"></i>
+            </div>
+          </div>
+          <div class="who-text">
+            <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_116_85)">
+                <path d="M17.58 35C21.0412 35 24.4246 36.0264 27.3025 37.9493C30.1803 39.8722 32.4234 42.6053 33.7479 45.803C35.0724 49.0007 35.419 52.5194 34.7437 55.9141C34.0685 59.3088 32.4018 62.4269 29.9544 64.8744C27.507 67.3218 24.3887 68.9885 20.9941 69.6637C17.5994 70.339 14.0807 69.9924 10.883 68.6679C7.68533 67.3434 4.95221 65.1003 3.02928 62.2225C1.10636 59.3446 0.08 55.9612 0.08 52.5L0 50C0 40.7174 3.68749 31.815 10.2513 25.2513C16.815 18.6875 25.7174 15 35 15V25C31.7155 24.9912 28.4619 25.6335 25.4272 26.89C22.3925 28.1464 19.637 29.992 17.32 32.32C16.4195 33.2188 15.5887 34.185 14.835 35.21C15.73 35.07 16.645 34.995 17.575 34.995L17.58 35ZM62.58 35C66.0412 35 69.4246 36.0264 72.3025 37.9493C75.1803 39.8722 77.4234 42.6053 78.7479 45.803C80.0724 49.0007 80.419 52.5194 79.7437 55.9141C79.0685 59.3088 77.4018 62.4269 74.9544 64.8744C72.507 67.3218 69.3887 68.9885 65.9941 69.6637C62.5994 70.339 59.0807 69.9924 55.883 68.6679C52.6853 67.3434 49.9522 65.1003 48.0293 62.2225C46.1064 59.3446 45.08 55.9612 45.08 52.5L45 50C45 40.7174 48.6875 31.815 55.2513 25.2513C61.815 18.6875 70.7174 15 80 15V25C76.7155 24.9912 73.4619 25.6335 70.4272 26.89C67.3925 28.1464 64.637 29.992 62.32 32.32C61.4195 33.2188 60.5887 34.185 59.835 35.21C60.73 35.07 61.645 35 62.58 35Z" fill="#333333"/>
+              </g>
+              <defs>
+                <clipPath id="clip0_116_85">
+                  <rect width="80" height="80" fill="white"/>
+                </clipPath>
+              </defs>
+            </svg>
+            <p class="who-content">
+              Мы вынуждены отталкиваться от того, что современная методология разработки требует анализа форм воздействия. В целом, конечно, понимание сути ресурсосберегающих технологий напрямую зависит от благоприятных перспектив. И нет сомнений, что предприниматели в сети интернет будут обнародованы. С учётом сложившейся международной обстановки, экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса профессионального сообщества. С другой стороны, реализация намеченных плановых заданий предоставляет широкие.
+            </p>
+            <h3 class="who-name">
+              Имя Фамилия 2
+            </h3>
+            <span class="who-prof">
+              Должность, кем являешься
+            </span>
+          </div>
+        </div>
+        <div class="who-slide">
+          <div class="who-photos">
+            <img src="./img/main-model.png" alt="slide">
+            <div class="who-arrows">
+              <i class="arrow arrow-left who-left"></i>
+              <i class="arrow arrow-right who-right"></i>
+            </div>
+          </div>
+          <div class="who-text">
+            <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_116_85)">
+                <path d="M17.58 35C21.0412 35 24.4246 36.0264 27.3025 37.9493C30.1803 39.8722 32.4234 42.6053 33.7479 45.803C35.0724 49.0007 35.419 52.5194 34.7437 55.9141C34.0685 59.3088 32.4018 62.4269 29.9544 64.8744C27.507 67.3218 24.3887 68.9885 20.9941 69.6637C17.5994 70.339 14.0807 69.9924 10.883 68.6679C7.68533 67.3434 4.95221 65.1003 3.02928 62.2225C1.10636 59.3446 0.08 55.9612 0.08 52.5L0 50C0 40.7174 3.68749 31.815 10.2513 25.2513C16.815 18.6875 25.7174 15 35 15V25C31.7155 24.9912 28.4619 25.6335 25.4272 26.89C22.3925 28.1464 19.637 29.992 17.32 32.32C16.4195 33.2188 15.5887 34.185 14.835 35.21C15.73 35.07 16.645 34.995 17.575 34.995L17.58 35ZM62.58 35C66.0412 35 69.4246 36.0264 72.3025 37.9493C75.1803 39.8722 77.4234 42.6053 78.7479 45.803C80.0724 49.0007 80.419 52.5194 79.7437 55.9141C79.0685 59.3088 77.4018 62.4269 74.9544 64.8744C72.507 67.3218 69.3887 68.9885 65.9941 69.6637C62.5994 70.339 59.0807 69.9924 55.883 68.6679C52.6853 67.3434 49.9522 65.1003 48.0293 62.2225C46.1064 59.3446 45.08 55.9612 45.08 52.5L45 50C45 40.7174 48.6875 31.815 55.2513 25.2513C61.815 18.6875 70.7174 15 80 15V25C76.7155 24.9912 73.4619 25.6335 70.4272 26.89C67.3925 28.1464 64.637 29.992 62.32 32.32C61.4195 33.2188 60.5887 34.185 59.835 35.21C60.73 35.07 61.645 35 62.58 35Z" fill="#333333"/>
+              </g>
+              <defs>
+                <clipPath id="clip0_116_85">
+                  <rect width="80" height="80" fill="white"/>
+                </clipPath>
+              </defs>
+            </svg>
+            <p class="who-content">
+              Мы вынуждены отталкиваться от того, что современная методология разработки требует анализа форм воздействия. В целом, конечно, понимание сути ресурсосберегающих технологий напрямую зависит от благоприятных перспектив. И нет сомнений, что предприниматели в сети интернет будут обнародованы. С учётом сложившейся международной обстановки, экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса профессионального сообщества. С другой стороны, реализация намеченных плановых заданий предоставляет широкие.
+            </p>
+            <h3 class="who-name">
+              Имя Фамилия
+            </h3>
+            <span class="who-prof">
+              Должность, кем являешься
+            </span>
+          </div>
+        </div>
+        <div class="who-slide">
+          <div class="who-photos">
+            <img src="./img/main-model.png" alt="slide">
+            <div class="who-arrows">
+              <i class="arrow arrow-left who-left"></i>
+              <i class="arrow arrow-right who-right"></i>
+            </div>
+          </div>
+          <div class="who-text">
+            <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_116_85)">
+                <path d="M17.58 35C21.0412 35 24.4246 36.0264 27.3025 37.9493C30.1803 39.8722 32.4234 42.6053 33.7479 45.803C35.0724 49.0007 35.419 52.5194 34.7437 55.9141C34.0685 59.3088 32.4018 62.4269 29.9544 64.8744C27.507 67.3218 24.3887 68.9885 20.9941 69.6637C17.5994 70.339 14.0807 69.9924 10.883 68.6679C7.68533 67.3434 4.95221 65.1003 3.02928 62.2225C1.10636 59.3446 0.08 55.9612 0.08 52.5L0 50C0 40.7174 3.68749 31.815 10.2513 25.2513C16.815 18.6875 25.7174 15 35 15V25C31.7155 24.9912 28.4619 25.6335 25.4272 26.89C22.3925 28.1464 19.637 29.992 17.32 32.32C16.4195 33.2188 15.5887 34.185 14.835 35.21C15.73 35.07 16.645 34.995 17.575 34.995L17.58 35ZM62.58 35C66.0412 35 69.4246 36.0264 72.3025 37.9493C75.1803 39.8722 77.4234 42.6053 78.7479 45.803C80.0724 49.0007 80.419 52.5194 79.7437 55.9141C79.0685 59.3088 77.4018 62.4269 74.9544 64.8744C72.507 67.3218 69.3887 68.9885 65.9941 69.6637C62.5994 70.339 59.0807 69.9924 55.883 68.6679C52.6853 67.3434 49.9522 65.1003 48.0293 62.2225C46.1064 59.3446 45.08 55.9612 45.08 52.5L45 50C45 40.7174 48.6875 31.815 55.2513 25.2513C61.815 18.6875 70.7174 15 80 15V25C76.7155 24.9912 73.4619 25.6335 70.4272 26.89C67.3925 28.1464 64.637 29.992 62.32 32.32C61.4195 33.2188 60.5887 34.185 59.835 35.21C60.73 35.07 61.645 35 62.58 35Z" fill="#333333"/>
+              </g>
+              <defs>
+                <clipPath id="clip0_116_85">
+                  <rect width="80" height="80" fill="white"/>
+                </clipPath>
+              </defs>
+            </svg>
+            <p class="who-content">
+              Мы вынуждены отталкиваться от того, что современная методология разработки требует анализа форм воздействия. В целом, конечно, понимание сути ресурсосберегающих технологий напрямую зависит от благоприятных перспектив. И нет сомнений, что предприниматели в сети интернет будут обнародованы. С учётом сложившейся международной обстановки, экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса профессионального сообщества. С другой стороны, реализация намеченных плановых заданий предоставляет широкие.
+            </p>
+            <h3 class="who-name">
+              Имя Фамилия
+            </h3>
+            <span class="who-prof">
+              Должность, кем являешься
+            </span>
+          </div>
+        </div>
+      </div>
+        <div class="who-dots">
+          <div data-num="0" class="dot"></div>
+          <div data-num="1" class="dot dot-active"></div>
+          <div data-num="2" class="dot"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="services">
+    <div class="container">
+      <h2 class="title services-title">Наши услуги</h2>
+    </div>
+  </div>
   <script src="./js/main.js"></script>
 </body>
 </html>
