services; animations, footer

--- a/index.html
+++ b/index.html
@@ -213,8 +213,121 @@
   <div class="services">
     <div class="container">
       <h2 class="title services-title">Наши услуги</h2>
+      <div class="coverflow">
+        <div class="content">
+          <div class="front">
+            <div class="front-image">
+              <img src="./img/main-model.png">
+            </div>
+            <div class="info">
+              <h2 class="info-title">Название услуги 1</h2>
+            </div>
+          </div>
+          <div class="back">
+            <h2 class="back-title">
+              Услуга 1
+            </h2>
+            <p class="back-description">
+              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+            </p>
+            <button class="back-btn btn">Записаться на консультацию</button>
+          </div>
+        </div>
+        <div class="content">
+          <div class="front">
+            <div class="front-image">
+              <img src="./img/main-model.png">
+            </div>
+            <div class="info">
+              <h2 class="info-title">Название услуги 1</h2>
+            </div>
+          </div>
+          <div class="back">
+            <h2 class="back-title">
+              Услуга 1
+            </h2>
+            <p class="back-description">
+              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+            </p>
+            <button class="back-btn btn">Записаться на консультацию</button>
+          </div>
+        </div>
+        <div class="content">
+          <div class="front">
+            <div class="front-image">
+              <img src="./img/main-model.png">
+            </div>
+            <div class="info">
+              <h2 class="info-title">Название услуги 1</h2>
+            </div>
+          </div>
+          <div class="back">
+            <h2 class="back-title">
+              Услуга 1
+            </h2>
+            <p class="back-description">
+              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+            </p>
+            <button class="back-btn btn">Записаться на консультацию</button>
+          </div>
+        </div>
+        <div class="content">
+          <div class="front">
+            <div class="front-image">
+              <img src="./img/main-model.png">
+            </div>
+            <div class="info">
+              <h2 class="info-title">Название услуги 1</h2>
+            </div>
+          </div>
+          <div class="back">
+            <h2 class="back-title">
+              Услуга 1
+            </h2>
+            <p class="back-description">
+              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+            </p>
+            <button class="back-btn btn">Записаться на консультацию</button>
+          </div>
+        </div>
+        <div class="content">
+          <div class="front">
+            <div class="front-image">
+              <img src="./img/main-model.png">
+            </div>
+            <div class="info">
+              <h2 class="info-title">Название услуги 1</h2>
+            </div>
+          </div>
+          <div class="back">
+            <h2 class="back-title">
+              Услуга 1
+            </h2>
+            <p class="back-description">
+              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+            </p>
+            <button class="back-btn btn">Записаться на консультацию</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
+  <footer class="header footer">
+    <div class="container">
+      <div class="header-wrap">
+        <a href="#" class="header-logo">
+          <picture>
+            <source media="(min-width: 501px)" srcset="./img/big-logo.png">
+            <img src="./img/small-logo.png" alt="logo Women Wealth International family office">
+          </picture>
+        </a>
+        <div class="footer-up">
+          <i class="arrow arrow-up"></i>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="./js/main.js"></script>
 </body>
 </html>
