--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           </div>
         </ul>
         <div class="header-right">
-          <select name="language_select" class="header-select">
+          <!-- <select name="language_select" class="header-select">
             <option value="1" class="header-option">RU</option>
             <option value="2" class="header-option">EN</option>
             <option value="3" class="header-option">FR</option>
-          </select>
+          </select> -->
           <div class="header-social">
             <a href="#" class="header-social-link"><img src="./img/icons/linkedin.svg" alt="linkedin logo"></a>
             <a href="#" class="header-social-link"><img src="./img/icons/telegram.svg" alt="telegram logo"></a>
@@ -210,7 +210,7 @@
     </div>
   </section>
 
-  <div class="services">
+  <section class="services">
     <div class="container">
       <h2 class="title services-title">Наши услуги</h2>
       <div class="coverflow">
@@ -311,7 +311,60 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
+
+  <section class="request">
+    <div class="container">
+      <h2 class="title request-title">Записаться на консультацию</h2>
+      <div class="request-wrap">
+        <div class="request-form">
+          <form action="#">
+            <div class="form-row">
+               <div class="input-data">
+                  <input type="text" required>
+                  <div class="underline"></div>
+                  <label for="">Имя</label>
+               </div>
+            </div>
+            <div class="form-row">
+              <div class="input-data">
+                <input type="text" required>
+                <div class="underline"></div>
+                <label for="">Фамилия</label>
+             </div>
+            </div>
+            <div class="form-row">
+               <div class="input-data">
+                  <input type="text" required>
+                  <div class="underline"></div>
+                  <label for="">Email</label>
+               </div>
+            </div>
+            <div class="form-row">
+              <div class="input-data">
+                <input type="text" required>
+                <div class="underline"></div>
+                <label for="">Telegram</label>
+             </div>
+            </div>
+            <div class="form-row">
+              <div class="input-data textarea">
+                <textarea rows="8" cols="80" required></textarea>
+                <div class="underline"></div>
+                <label for="">Пожелания</label>
+              </div>
+            </div>
+            <button type="submit" class="btn form-btn">Записаться на консультацию</button>
+         </form>
+        </div>
+        <div class="request-images">
+          <div class="request-image"><img src="./img/form-2.png" alt=""></div>
+          <div class="request-image"><img src="./img/form-1.png" alt=""></div>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
   <footer class="header footer">
     <div class="container">
