--- a/index.html
+++ b/index.html
@@ -313,6 +313,42 @@
     </div>
   </section>
 
+  <section class="products">
+    <div class="container">
+      <h2 class="title products-title">Кейсы клиентов</h2>
+      <div class="page-content">
+        <div class="card">
+          <div class="card-content">
+            <h2 class="card-title">Альтернатива инвестициям в недвижимость в России</h2>
+            <p class="card-copy">Нина, 35 лет</p>
+            <button class="card-btn open-modal">Подробнее</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <h2 class="card-title">Безопасное инвестирование на зарубежном рынке без первоначального капитала</h2>
+            <p class="card-copy">Екатерина, 33 года</p>
+            <button class="card-btn open-modal">Подробнее</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <h2 class="card-title">Как создать капитал, о котором НИКТО не узнает</h2>
+            <p class="card-copy">Ольга, 42 года</p>
+            <button class="card-btn open-modal">Подробнее</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <h2 class="card-title">Снижение предпринимательских рисков и рост доходов</h2>
+            <p class="card-copy">Анастасия, 28 лет</p>
+            <button class="card-btn open-modal">Подробнее</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="request">
     <div class="container">
       <h2 class="title request-title">Записаться на консультацию</h2>
@@ -363,7 +399,6 @@
         </div>
       </div>
     </div>
-
   </section>
 
   <footer class="header footer">
@@ -381,6 +416,38 @@
       </div>
     </div>
   </footer>
+
+  <!-- modals -->
+  <div class="modal">
+    <a href="#" class="close"></a>
+    <h2 class="modal-title">Альтернатива инвестициям в недвижимость в России</h2>
+    <span class="modal-term">Срок оказания услуги – 2-30 дней</span>
+    <div class="modal-container">
+      <div class="modal-block">
+        <div class="modal-image"><img src="./img/modal/1.svg" alt="icon for modal 1"></div>
+        <div class="modal-content">
+          <h3 class="modal-subtitle">Точка А: БЫЛО</h3>
+          <p class="modal-description">Нина, 35 лет,  более 5 лет получала рентный доход от сдачи жилой недвижимости с доходностью 5 % годовых в рублях. В последние время доходность и затраты на обслуживание перестали устраивать. Кроме того, реализовались экономические риски, связанные с инвестициями с недвижимостью в России.</p>
+        </div>
+      </div>
+      <div class="modal-block">
+        <div class="modal-image"><img src="./img/modal/2.svg" alt="icon for modal 2"></div>
+        <div class="modal-content">
+          <h3 class="modal-subtitle">СДЕЛАНО</h3>
+          <p class="modal-description">Мы предложили Нине портфельные стратегии из REIT-фондов для инвестирования в диверсифицированные пулы недвижимости (более 7000 объектов в Европе и в США), а также объекты недвижимости в ОАЭ и Тайланде.</p>
+        </div>
+      </div>
+      <div class="modal-block">
+        <div class="modal-image"><img src="./img/modal/3.svg" alt="icon for modal 3"></div>
+        <div class="modal-content">
+          <h3 class="modal-subtitle">Точка Б: СТАЛО</h3>
+          <p class="modal-description">Нина получила ликвидные инструменты пассивного инвестирования, которые исключают затраты личного времени, дают гарантированный дивидендный доход в размере 8% годовых в долларах, а также рост капитала в твердой валюте.</p>
+        </div>
+      </div>
+      <button class="modal-btn btn">Записаться на консультацию</button>
+    </div>
+  </div>
+  
   <script src="./js/main.js"></script>
 </body>
 </html>
