--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <span class="main-help">Ваше время принадлежит только вам, а управлением капиталом делегируйте профессионалам.</span>
           <h1 class="main-title">Women Wealth International family office</h1>
           <p class="main-description">
-            Премиальный сервис для респектабельных женщин по управлению семейным и личным капиталом
+            Премиальный сервис для респектабельных женщин по управлению благосостоянием (Wealth Management) на основе финансового планирования по стандарту Chartered Insurance Institute (Великобритания).
           </p>
           <button class="btn">Получить персональное предложение</button>
         </div>
@@ -130,13 +130,15 @@
               </defs>
             </svg>
             <p class="who-content">
-              Мы вынуждены отталкиваться от того, что современная методология разработки требует анализа форм воздействия. В целом, конечно, понимание сути ресурсосберегающих технологий напрямую зависит от благоприятных перспектив. И нет сомнений, что предприниматели в сети интернет будут обнародованы. С учётом сложившейся международной обстановки, экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса профессионального сообщества. С другой стороны, реализация намеченных плановых заданий предоставляет широкие.
+              - Ментор по личным финансам и инвестициям для женщин-предпринимателей <br> <br>
+              - Инвестор с 2015 г., капитал в управлении свыше $ 3 500 000 <br> <br>
+              - Доктор (PhD) международного права, педагог высшей школы <br> <br>
             </p>
             <h3 class="who-name">
-              Имя Фамилия 2
+              Екатерина Гордеева
             </h3>
             <span class="who-prof">
-              Должность, кем являешься
+              Co-founder
             </span>
           </div>
         </div>
@@ -160,51 +162,21 @@
               </defs>
             </svg>
             <p class="who-content">
-              Мы вынуждены отталкиваться от того, что современная методология разработки требует анализа форм воздействия. В целом, конечно, понимание сути ресурсосберегающих технологий напрямую зависит от благоприятных перспектив. И нет сомнений, что предприниматели в сети интернет будут обнародованы. С учётом сложившейся международной обстановки, экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса профессионального сообщества. С другой стороны, реализация намеченных плановых заданий предоставляет широкие.
+              - Предприниматель с 13 летним опытом, инвестор с 2015 года <br> <br>
+              - Финансовый наставник, капитал в управлении свыше $ 7 500 000 <br> <br>
             </p>
             <h3 class="who-name">
-              Имя Фамилия
+              Ирина Низамутдинова
             </h3>
             <span class="who-prof">
-              Должность, кем являешься
-            </span>
-          </div>
-        </div>
-        <div class="who-slide">
-          <div class="who-photos">
-            <img src="./img/main-model.png" alt="slide">
-            <div class="who-arrows">
-              <i class="arrow arrow-left who-left"></i>
-              <i class="arrow arrow-right who-right"></i>
-            </div>
-          </div>
-          <div class="who-text">
-            <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <g clip-path="url(#clip0_116_85)">
-                <path d="M17.58 35C21.0412 35 24.4246 36.0264 27.3025 37.9493C30.1803 39.8722 32.4234 42.6053 33.7479 45.803C35.0724 49.0007 35.419 52.5194 34.7437 55.9141C34.0685 59.3088 32.4018 62.4269 29.9544 64.8744C27.507 67.3218 24.3887 68.9885 20.9941 69.6637C17.5994 70.339 14.0807 69.9924 10.883 68.6679C7.68533 67.3434 4.95221 65.1003 3.02928 62.2225C1.10636 59.3446 0.08 55.9612 0.08 52.5L0 50C0 40.7174 3.68749 31.815 10.2513 25.2513C16.815 18.6875 25.7174 15 35 15V25C31.7155 24.9912 28.4619 25.6335 25.4272 26.89C22.3925 28.1464 19.637 29.992 17.32 32.32C16.4195 33.2188 15.5887 34.185 14.835 35.21C15.73 35.07 16.645 34.995 17.575 34.995L17.58 35ZM62.58 35C66.0412 35 69.4246 36.0264 72.3025 37.9493C75.1803 39.8722 77.4234 42.6053 78.7479 45.803C80.0724 49.0007 80.419 52.5194 79.7437 55.9141C79.0685 59.3088 77.4018 62.4269 74.9544 64.8744C72.507 67.3218 69.3887 68.9885 65.9941 69.6637C62.5994 70.339 59.0807 69.9924 55.883 68.6679C52.6853 67.3434 49.9522 65.1003 48.0293 62.2225C46.1064 59.3446 45.08 55.9612 45.08 52.5L45 50C45 40.7174 48.6875 31.815 55.2513 25.2513C61.815 18.6875 70.7174 15 80 15V25C76.7155 24.9912 73.4619 25.6335 70.4272 26.89C67.3925 28.1464 64.637 29.992 62.32 32.32C61.4195 33.2188 60.5887 34.185 59.835 35.21C60.73 35.07 61.645 35 62.58 35Z" fill="#333333"/>
-              </g>
-              <defs>
-                <clipPath id="clip0_116_85">
-                  <rect width="80" height="80" fill="white"/>
-                </clipPath>
-              </defs>
-            </svg>
-            <p class="who-content">
-              Мы вынуждены отталкиваться от того, что современная методология разработки требует анализа форм воздействия. В целом, конечно, понимание сути ресурсосберегающих технологий напрямую зависит от благоприятных перспектив. И нет сомнений, что предприниматели в сети интернет будут обнародованы. С учётом сложившейся международной обстановки, экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса профессионального сообщества. С другой стороны, реализация намеченных плановых заданий предоставляет широкие.
-            </p>
-            <h3 class="who-name">
-              Имя Фамилия
-            </h3>
-            <span class="who-prof">
-              Должность, кем являешься
+              Co-founder
             </span>
           </div>
         </div>
       </div>
         <div class="who-dots">
-          <div data-num="0" class="dot"></div>
-          <div data-num="1" class="dot dot-active"></div>
-          <div data-num="2" class="dot"></div>
+          <div data-num="0" class="dot dot-active"></div>
+          <div data-num="1" class="dot"></div>
         </div>
       </div>
     </div>
@@ -220,15 +192,15 @@
               <img src="./img/main-model.png">
             </div>
             <div class="info">
-              <h2 class="info-title">Название услуги 1</h2>
+              <h2 class="info-title">Аудит текущего капитала</h2>
             </div>
           </div>
           <div class="back">
             <h2 class="back-title">
-              Услуга 1
+              Аудит текущего капитала
             </h2>
             <p class="back-description">
-              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+              Оцениваем активы, пассивы, ежемесячный cashflow, оцифровываем источники ваших доходов и расходов. Формируем эффективную стратегию по управлению активами семьи в формате mindmap.
             </p>
             <button class="back-btn btn">Записаться на консультацию</button>
           </div>
@@ -239,15 +211,17 @@
               <img src="./img/main-model.png">
             </div>
             <div class="info">
-              <h2 class="info-title">Название услуги 1</h2>
+              <h2 class="info-title">Инфраструктура капитала <br> и  создание финансовой <br> защиты</h2>
             </div>
           </div>
           <div class="back">
             <h2 class="back-title">
-              Услуга 1
+              Инфраструктура капитала и  создание финансовой защиты
             </h2>
             <p class="back-description">
-              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+              Создаем индивидуальную систему накопления и выстраиваем финансово-банковскую инфраструктуру для работы с вашим инвесткапиталом.
+Защищаем ваш семейный капитал с помощью рисковых и накопительных страховых решений. Минимизируем риски, связанные с возможной потерей, наследованием, отчуждением и разделением капитала.
+
             </p>
             <button class="back-btn btn">Записаться на консультацию</button>
           </div>
@@ -258,15 +232,15 @@
               <img src="./img/main-model.png">
             </div>
             <div class="info">
-              <h2 class="info-title">Название услуги 1</h2>
+              <h2 class="info-title">Wealth Management <br> for Family</h2>
             </div>
           </div>
           <div class="back">
             <h2 class="back-title">
-              Услуга 1
+              Wealth Management for Family.
             </h2>
             <p class="back-description">
-              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+              Берем на себя управление семейным капиталом - защищаем, сохраняем и приумножаем капитал через созданную инфраструктуру. Подбираем и реализуем индивидуальные инвестиционные решения для достижения финансовых целей семьи, закрываем вопросы налогообложения в различных юрисдикциях, занимаемся налоговым планированием, организуем и сопровождаем юридические сделки, формируем систему наследования капитала.
             </p>
             <button class="back-btn btn">Записаться на консультацию</button>
           </div>
@@ -277,15 +251,15 @@
               <img src="./img/main-model.png">
             </div>
             <div class="info">
-              <h2 class="info-title">Название услуги 1</h2>
+              <h2 class="info-title">Международное <br> налоговое <br> сопровождение.</h2>
             </div>
           </div>
           <div class="back">
             <h2 class="back-title">
-              Услуга 1
+              Международное налоговое сопровождение.
             </h2>
             <p class="back-description">
-              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+              Консультируем и поддерживаем в любых вопросах международного налогообложения. Совокупно закрываем задачи во всех юрисдикциях: налоговое планирование, своевременная подача декларации и т.д. Помогаем проходить процедуры налогового комплаенса.
             </p>
             <button class="back-btn btn">Записаться на консультацию</button>
           </div>
@@ -296,15 +270,95 @@
               <img src="./img/main-model.png">
             </div>
             <div class="info">
-              <h2 class="info-title">Название услуги 1</h2>
+              <h2 class="info-title"> Международное <br> юридическое <br> сопровождение </h2>
             </div>
           </div>
           <div class="back">
             <h2 class="back-title">
-              Услуга 1
+              Международное юридическое сопровождение
             </h2>
             <p class="back-description">
-              Прежде всего, повышение уровня гражданского сознания напрямую зависит от как самодостаточных, так и внешне зависимых концептуальных решений. Господа, укрепление и.
+              Организовываем и сопровождаем сделки, касающиеся бизнеса и частной жизни владельца капитала. Консультируем, анализируем налоговые, юридические вопросы сделок и подбираем решения, отвечающие вашим интересам.
+            </p>
+            <button class="back-btn btn">Записаться на консультацию</button>
+          </div>
+        </div>
+        <div class="content">
+          <div class="front">
+            <div class="front-image">
+              <img src="./img/main-model.png">
+            </div>
+            <div class="info">
+              <h2 class="info-title"> Наследование капитала</h2>
+            </div>
+          </div>
+          <div class="back">
+            <h2 class="back-title">
+              Наследование капитала
+            </h2>
+            <p class="back-description">
+              Решаем все вопросы наследования капитала: консультируем, определяем подходящий порядок распределения активов между наследниками и подбираем наиболее надежный и безопасный способ передачи наследства.
+            </p>
+            <button class="back-btn btn">Записаться на консультацию</button>
+          </div>
+        </div>
+        <div class="content">
+          <div class="front">
+            <div class="front-image">
+              <img src="./img/main-model.png">
+            </div>
+            <div class="info">
+              <h2 class="info-title"> Создание и управление <br> семейным фондом / трастом
+                 </h2>
+            </div>
+          </div>
+          <div class="back">
+            <h2 class="back-title">
+              Создание и управление семейным фондом / трастом
+            </h2>
+            <p class="back-description">
+              Сохраняем ваше благосостояние и обеспечиваем его безопасное будущее. Консолидируем финансовые активы
+            </p>
+            <button class="back-btn btn">Записаться на консультацию</button>
+          </div>
+        </div>
+        <div class="content">
+          <div class="front">
+            <div class="front-image">
+              <img src="./img/main-model.png">
+            </div>
+            <div class="info">
+              <h2 class="info-title"> Создание и управление <br> семейным фондом / трастом
+                 </h2>
+            </div>
+          </div>
+          <div class="back">
+            <h2 class="back-title">
+              Создание и управление семейным фондом / трастом
+            </h2>
+            <p class="back-description">
+              Сохраняем ваше благосостояние и обеспечиваем его безопасное будущее. Консолидируем финансовые активы семьи и формируем структуру эффективного управления капиталом.
+              Создаем семейные фонды и трасты, отвечаем за их управление и администрирование в различных юрисдикциях и валютах. Защищаем активы семьи от финансовых рисков и угроз: судебные иски, налоговые обязательства, взыскания, наследование, развод и другие жизненные обстоятельства.  Снижаем налоговую нагрузку на капитал, решаем вопросы сложной системы наследования.              
+            </p>
+            <button class="back-btn btn">Записаться на консультацию</button>
+          </div>
+        </div>
+        <div class="content">
+          <div class="front">
+            <div class="front-image">
+              <img src="./img/main-model.png">
+            </div>
+            <div class="info">
+              <h2 class="info-title"> Создание и управление <br> семейным фондом / трастом
+                 </h2>
+            </div>
+          </div>
+          <div class="back">
+            <h2 class="back-title">
+              Создание и управление семейным фондом / трастом
+            </h2>
+            <p class="back-description">
+              Travel service. Помогаем получить второе гражданство, в том числе и по рождению. Запускаем и сопровождаем процесс открытия новых компаний в необходимой вам юрисдикции. Оформляем визы и ВНЖ для всей семьи. Организовываем процесс переезда семьи, включая бронирование жилья, покупку билетов, анализ и выбор лучших международных школ и детских садов для ваших детей.
             </p>
             <button class="back-btn btn">Записаться на консультацию</button>
           </div>
@@ -345,6 +399,46 @@
             <button class="card-btn open-modal">Подробнее</button>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="faqSection" class="faq">
+    <div class="container">
+      <h2 class="title faq-title">FAQ</h2>
+      <div id="faq">
+        <ul>
+          <li data-num="01">
+            <input type="checkbox" checked>
+            <i></i>
+            <h3>Что такое family office?</h3>
+            <p>
+              Независимая организация по эффективному управлению благосостоянием семьи. Мы защищаем, сохраняем и приумножаем личный и семейный капитал. Решаем все финансовые, юридические, налоговые и инвестиционные задачи, полностью снимая с клиента заботу об управлении благосостоянием семьи.
+            </p>
+          </li>
+          <li data-num="02">
+            <input type="checkbox" checked>
+            <i></i>
+            <h3>Почему клиенты выбирают именно WWI?</h3>
+            <p>Почему клиенты выбирают именно WWI? 
+              Women Wealth International Family Office быстро и надежно решает любой запрос, связанный с защитой, сохранением и приумножением капитала. Вам не нужно обращаться в отдельные компании и коммуницировать с огромным количеством специалистов — у нас есть все необходимые эксперты, способные решить даже самую нестандартную задачу.</p>
+          </li>
+          <li data-num="03">
+            <input type="checkbox" checked>
+            <i></i>
+            <h3>Как стать клиентом family office?</h3>
+            <p>
+              <a href="#" class="btn">Записаться на консультацию</a>
+            </p>
+          </li>
+          <li data-num="04">
+            <input type="checkbox" checked>
+            <i></i>
+            <h3>Why do you have a monthly project cap?</h3>
+            <p>Сюда нужен ответ
+            </p>
+          </li>
+        </ul>
       </div>
     </div>
   </section>
